--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Sun Shuran / Personal Homepage"
 title_separator          : "-"
-name                     : &name "Sun Shuran"
+name                     : &name "Shuran Sun"
 description              : &description
 url                      : https://ssr1357.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
